Fix map height extending with menu. Improve menu text alignment.

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -14,12 +14,17 @@
   color: #61dafb;
 }
 
-.main-container {
-  min-height: 95vh;
+.map-container {
+  min-height: 98vh;
+}
+
+.menu-container {
+  max-height: 95vh;
+  overflow-y: auto;
 }
 
 @media screen and (max-width: 960px) {
-  .menu-col {
+  .menu-container {
     flex: 0 0 0;
     min-width: 220px;
   }
